--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ MinAndMaxValue/MinAndMaxValue/Properties/AssemblyInfo.cs
 Loops and arrays/Loops and arrays/obj/Release/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
 Loops and arrays/Loops and arrays/obj/Release/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
 Loops and arrays/Loops and arrays/obj/Release/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+MyTryParse and Pow/.vs/MyTryParse and Pow/v14/.suo
+MyTryParse and Pow/MyTryParse and Pow/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+MyTryParse and Pow/MyTryParse and Pow/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+MyTryParse and Pow/MyTryParse and Pow/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+MyTryParse and Pow/MyTryParse and Pow/Properties/AssemblyInfo.cs
