--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ MyTryParse and Pow/MyTryParse and Pow/obj/Debug/TemporaryGeneratedFile_036C0B5B-
 MyTryParse and Pow/MyTryParse and Pow/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
 MyTryParse and Pow/MyTryParse and Pow/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
 MyTryParse and Pow/MyTryParse and Pow/Properties/AssemblyInfo.cs
+/MyList and MyStack/MyList and MyStack/obj/Debug
