--- a/Module Control 2/Module Control 2/Module Control 2.csproj
+++ b/Module Control 2/Module Control 2/Module Control 2.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseFile.cs" />
+    <Compile Include="IFile.cs" />
+    <Compile Include="Image.cs" />
+    <Compile Include="Movie.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TextFile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
