--- a/Exceptions/Exceptions/Exceptions.csproj
+++ b/Exceptions/Exceptions/Exceptions.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestA.cs" />
+    <Compile Include="TestB.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
