--- a/Collections/Collections/Collections.csproj
+++ b/Collections/Collections/Collections.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyList.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestGeneric.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
