--- a/Collections/GenericList/GenericList.csproj
+++ b/Collections/GenericList/GenericList.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{032EC80E-97C6-49CC-A620-47111BDD8E4A}</ProjectGuid>
+    <ProjectGuid>{9AE580C2-5472-4C5F-8E9B-14A89F306806}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CollectionInterfaces</RootNamespace>
-    <AssemblyName>CollectionInterfaces</AssemblyName>
+    <RootNamespace>GenericList</RootNamespace>
+    <AssemblyName>GenericList</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,11 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnotherList.cs" />
-    <Compile Include="SecondList.cs" />
-    <Compile Include="MyComparer.cs" />
-    <Compile Include="MyList.cs" />
-    <Compile Include="Point.cs" />
+    <Compile Include="MyDictionary.cs" />
+    <Compile Include="MyGenericList.cs" />
+    <Compile Include="MyKeyValuePair.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
