--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,9 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
+/Collections
+/DelegatesEvents
+/Exceptions
+/Module Control 2
+/OOP3/Pen
+/OOP4
