--- a/LINQ test/LINQ test/LINQ test.csproj
+++ b/LINQ test/LINQ test/LINQ test.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actor.cs" />
+    <Compile Include="ActorsComparer.cs" />
     <Compile Include="ArtObject.cs" />
     <Compile Include="ArtObjectComparer.cs" />
     <Compile Include="Book.cs" />
