--- a/ReflectionExample/ReflectionExample/ReflectionExample.csproj
+++ b/ReflectionExample/ReflectionExample/ReflectionExample.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F85D85E4-AB53-4CFC-A11C-45D3BBB6166C}</ProjectGuid>
+    <ProjectGuid>{539646DA-3E9C-48BA-AEB6-FB3E19A9FDA9}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleApplication1</RootNamespace>
-    <AssemblyName>ConsoleApplication1</AssemblyName>
+    <RootNamespace>ReflectionExample</RootNamespace>
+    <AssemblyName>ReflectionExample</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
