--- a/ReflectionExample/ReflectionExample/ReflectionExample.csproj
+++ b/ReflectionExample/ReflectionExample/ReflectionExample.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Currency.cs" />
+    <Compile Include="PermissionsAttribute.cs" />
+    <Compile Include="PermissionsValidator.cs" />
+    <Compile Include="Phone.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
