--- a/Entity_Framework/Hospital/App.config
+++ b/Entity_Framework/Hospital/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
 	<connectionStrings>
-		<add name="HospitalContext" connectionString="Data Source=D23\SQLEXPRESS;Initial Catalog=Zoo;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+		<add name="HospitalContext" connectionString="Data Source=D23\SQLEXPRESS;Initial Catalog=HospitalDb;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
