--- a/Entity_Framework/Entity_Framework/Entity_Framework.csproj
+++ b/Entity_Framework/Entity_Framework/Entity_Framework.csproj
@@ -54,7 +54,14 @@
   <ItemGroup>
     <Compile Include="Department.cs" />
     <Compile Include="Laptop.cs" />
+    <Compile Include="Migrations\201802071641506_InitialCreate.cs" />
+    <Compile Include="Migrations\201802071641506_InitialCreate.Designer.cs">
+      <DependentUpon>201802071641506_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Phone.cs" />
+    <Compile Include="PhoneConfig.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -71,6 +78,11 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201802071641506_InitialCreate.resx">
+      <DependentUpon>201802071641506_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
