--- a/Entity_Framework/Entity_Framework/Entity_Framework.csproj
+++ b/Entity_Framework/Entity_Framework/Entity_Framework.csproj
@@ -58,6 +58,10 @@
     <Compile Include="Migrations\201802071641506_InitialCreate.Designer.cs">
       <DependentUpon>201802071641506_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201802091233133_A few entities were added.cs" />
+    <Compile Include="Migrations\201802091233133_A few entities were added.Designer.cs">
+      <DependentUpon>201802091233133_A few entities were added.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Phone.cs" />
@@ -82,6 +86,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201802071641506_InitialCreate.resx">
       <DependentUpon>201802071641506_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201802091233133_A few entities were added.resx">
+      <DependentUpon>201802091233133_A few entities were added.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
